PLUGINWIZARD-39 : Bootstrap integratrion for Lutece v4 - Work in progress
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@46186 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin.html
@@ -25,61 +25,20 @@
                     </div>
                 </div>
 
-                <div class="controls">
-                    <input class="checkbox" name="user_choice" value="add_business_classes"  checked="checked" type="checkbox">
-                    #i18n{pluginwizard.pluginwizard_create_plugin.labelAddBusinessClasses}             
-                </div>
+                <ul>
+                    <li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddBusinessClasses}</li>             
+                    <li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddJspBean}</li>             
+                    <li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddXPage}</li>
+                    <li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddSqlFiles}</li>           
+                    <li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddBackOfficeTemplate}</li>            
+                    <li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddResourceFiles}</li>           
+                    <li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddBackOfficeJsp}</li>             
+                    <li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddPluginPropertiesFile}</li>             
+                    <li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddPluginXmlDefinition}</li>             
+                    <li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddMavenPom}</li>             
+                    <li>#i18n{pluginwizard.pluginwizard_create_plugin.labelAddSpringContextXml}</li>             
+                </ul>
                 
-                <div class="controls">
-                    <input class="checkbox" name="user_choice" value="add_jsp_bean" checked="checked" type="checkbox">
-                    #i18n{pluginwizard.pluginwizard_create_plugin.labelAddJspBean}             
-                </div>
-                
-                <div class="controls">
-                    <input class="checkbox" name="user_choice" value="add_xpages" checked="checked" type="checkbox">
-                    #i18n{pluginwizard.pluginwizard_create_plugin.labelAddXPage}             
-                </div>
-                
-                <div class="controls">
-                    <input class="checkbox" name="user_choice" value="add_sql_files" checked="checked" type="checkbox">
-                    #i18n{pluginwizard.pluginwizard_create_plugin.labelAddSqlFiles}             
-                </div>
-                
-                <div class="controls">
-                    <input class="checkbox" name="user_choice" value="add_back_office_template" checked="checked" type="checkbox">
-                    #i18n{pluginwizard.pluginwizard_create_plugin.labelAddBackOfficeTemplate}             
-                </div>
-                
-                <div class="controls">
-                    <input class="checkbox" name="user_choice" value="add_resource_files" checked="checked" type="checkbox">
-                    #i18n{pluginwizard.pluginwizard_create_plugin.labelAddResourceFiles}             
-                </div>
-                
-                <div class="controls">
-                    <input class="checkbox" name="user_choice" value="add_back_office_jsp" checked="checked" type="checkbox">
-                    #i18n{pluginwizard.pluginwizard_create_plugin.labelAddBackOfficeJsp}             
-                </div>
-
-                <div class="controls">
-                    <input class="checkbox" name="user_choice" value="add_plugin_properties_file" checked="checked" type="checkbox">
-                    #i18n{pluginwizard.pluginwizard_create_plugin.labelAddPluginPropertiesFile}             
-                </div>
-
-                <div class="controls">
-                    <input class="checkbox" name="user_choice" value="add_plugin_xml_definition" checked="checked" type="checkbox">
-                    #i18n{pluginwizard.pluginwizard_create_plugin.labelAddPluginXmlDefinition}             
-                </div>
-
-                <div class="controls">
-                    <input class="checkbox" name="user_choice" value="add_maven_pom_xml" checked="checked" type="checkbox">
-                    #i18n{pluginwizard.pluginwizard_create_plugin.labelAddMavenPom}             
-                </div>
-
-                <div class="controls">
-                    <input class="checkbox" name="user_choice" value="add_spring_context_xml" checked="checked" type="checkbox">
-                    #i18n{pluginwizard.pluginwizard_create_plugin.labelAddSpringContextXml}             
-                </div>
-
                 <div class="form-actions">                        
                     <input class="btn btn-primary" name="do_create_plugin" value="#i18n{pluginwizard.pluginwizard_create_plugin.buttonCreatePlugin}" type="submit" />                        
                 </div>	
