PLUGINWIZARD-39 : Bootstrap integratrion for Lutece v4 - Work in progress
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@46207 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/modules/junittestclassgen/junit_test_plugin_class.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/modules/junittestclassgen/junit_test_plugin_class.html
@@ -54,8 +54,6 @@ public class ${businessClass.businessClass}BusinessTest extends LuteceTestCase
 
     public void testBusiness(  )
     {
-        Plugin plugin = PluginService.getPlugin( "${businessClass.businessPluginName}" );
-        
         // Initialize an object
         ${businessClass.businessClass} ${businessClass.instanceName} = new ${businessClass.businessClass}();
         <#list businessClass.attributes as attribute>
@@ -63,8 +61,8 @@ public class ${businessClass.businessClass}BusinessTest extends LuteceTestCase
         </#list>
 
         // Create test
-        ${businessClass.businessClass}Home.create( ${businessClass.instanceName} , plugin );
-        ${businessClass.businessClass} ${businessClass.instanceName}Stored = ${businessClass.businessClass}Home.findByPrimaryKey( ${businessClass.instanceName}.get${businessClass.primaryKeyName?cap_first}() , plugin );
+        ${businessClass.businessClass}Home.create( ${businessClass.instanceName} );
+        ${businessClass.businessClass} ${businessClass.instanceName}Stored = ${businessClass.businessClass}Home.findByPrimaryKey( ${businessClass.instanceName}.get${businessClass.primaryKeyName?cap_first}() );
         <#list businessClass.attributes as attribute>
         assertEquals( ${businessClass.instanceName}Stored.get${attribute.name}() , ${businessClass.instanceName}.get${attribute.name}() );
         </#list>
@@ -73,18 +71,18 @@ public class ${businessClass.businessClass}BusinessTest extends LuteceTestCase
         <#list businessClass.attributes as attribute>
         ${businessClass.instanceName}.set${attribute.name}( ${attribute.name?upper_case}2 );
         </#list>
-        ${businessClass.businessClass}Home.update( ${businessClass.instanceName} , plugin );
-        ${businessClass.instanceName}Stored = ${businessClass.businessClass}Home.findByPrimaryKey( ${businessClass.instanceName}.get${businessClass.primaryKeyName?cap_first}() , plugin );
+        ${businessClass.businessClass}Home.update( ${businessClass.instanceName} );
+        ${businessClass.instanceName}Stored = ${businessClass.businessClass}Home.findByPrimaryKey( ${businessClass.instanceName}.get${businessClass.primaryKeyName?cap_first}() );
         <#list businessClass.attributes as attribute>
         assertEquals( ${businessClass.instanceName}Stored.get${attribute.name}() , ${businessClass.instanceName}.get${attribute.name}() );
         </#list>
 
         // List test
-        ${businessClass.businessClass}Home.get${businessClass.businessClass}sList( plugin );
+        ${businessClass.businessClass}Home.get${businessClass.businessClass}sList();
 
         // Delete test
-        ${businessClass.businessClass}Home.remove( ${businessClass.instanceName}.get${businessClass.primaryKeyName?cap_first}() , plugin );
-        ${businessClass.instanceName}Stored = ${businessClass.businessClass}Home.findByPrimaryKey( ${businessClass.instanceName}.get${businessClass.primaryKeyName?cap_first}() , plugin );
+        ${businessClass.businessClass}Home.remove( ${businessClass.instanceName}.get${businessClass.primaryKeyName?cap_first}() );
+        ${businessClass.instanceName}Stored = ${businessClass.businessClass}Home.findByPrimaryKey( ${businessClass.instanceName}.get${businessClass.primaryKeyName?cap_first}() );
         assertNull( ${businessClass.instanceName}Stored );
         
     }
