--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_admin_feature.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_admin_feature.html
@@ -26,14 +26,14 @@
                 <div class="control-group">
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_create_admin_feature.labelFeatureTitle} : </label>                
                     <div class="controls">      
-                        <input class="input-xxlarge" type="text" name="feature_title" value="${plugin_model.pluginName}.adminFeature.${plugin_model.pluginName}_management.name" size="30" />                <br />                                           
+                        <input class="input-xxlarge" type="text" name="feature_title" value="" size="30" />                <br />                                           
                     </div>
                 </div>
 
                 <div class="control-group">                                                         
                     <label class="control-label">#i18n{pluginwizard.pluginwizard_create_admin_feature.labelFeatureDescription} : </label>                 
                     <div class="controls">        
-                        <input class="input-xxlarge" type="text" name="feature_description" value="${plugin_model.pluginName}.adminFeature.${plugin_model.pluginName}_management.description" size="30" />                <br />                            
+                        <input class="input-xxlarge" type="text" name="feature_description" value="" size="30" />                <br />                            
                     </div>
                 </div>
 
@@ -56,7 +56,7 @@
                     <label class="control-label" >#i18n{pluginwizard.pluginwizard_create_admin_feature.labelFeatureUrl} :         
                     </label>          
                     <div class="controls">            
-                        <input class="input-xxlarge" type="text" name="feature_url" value="jsp/admin/plugins/${plugin_model.pluginName}/Manage${plugin_model.pluginName?cap_first}sHome.jsp" size="30" />                     
+                        <input class="input-xxlarge" type="text" name="feature_url" value="jsp/admin/plugins/${plugin_model.pluginName}/Manage${plugin_model.pluginName?cap_first}.jsp" size="30" />                     
                     </div>             
                 </div>                    
                 <div class="form-actions">                                                  
