--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin.html
@@ -21,19 +21,24 @@
                     </div>
                 </div>           
 
-                <ul>
-                    <li>#i18n{pluginwizard.pluginwizard_modify_plugin.labelAddBusinessClasses}</li>             
-                    <li>#i18n{pluginwizard.pluginwizard_modify_plugin.labelAddJspBean}</li>             
-                    <li>#i18n{pluginwizard.pluginwizard_modify_plugin.labelAddXPage}</li>
-                    <li>#i18n{pluginwizard.pluginwizard_modify_plugin.labelAddSqlFiles}</li>           
-                    <li>#i18n{pluginwizard.pluginwizard_modify_plugin.labelAddBackOfficeTemplate}</li>            
-                    <li>#i18n{pluginwizard.pluginwizard_modify_plugin.labelAddResourceFiles}</li>           
-                    <li>#i18n{pluginwizard.pluginwizard_modify_plugin.labelAddBackOfficeJsp}</li>             
-                    <li>#i18n{pluginwizard.pluginwizard_modify_plugin.labelAddPluginPropertiesFile}</li>             
-                    <li>#i18n{pluginwizard.pluginwizard_modify_plugin.labelAddPluginXmlDefinition}</li>             
-                    <li>#i18n{pluginwizard.pluginwizard_modify_plugin.labelAddMavenPom}</li>             
-                    <li>#i18n{pluginwizard.pluginwizard_modify_plugin.labelAddSpringContextXml}</li>             
-                </ul>
+                <div class="control-group">
+                    <div class="controls">
+                        <h5>#i18n{pluginwizard.pluginwizard_modify_plugin.labelSummary} :</h5>
+                        <ul>
+                            <li>#i18n{pluginwizard.pluginwizard_modify_plugin.labelAddBusinessClasses}</li>             
+                            <li>#i18n{pluginwizard.pluginwizard_modify_plugin.labelAddJspBean}</li>             
+                            <li>#i18n{pluginwizard.pluginwizard_modify_plugin.labelAddXPage}</li>
+                            <li>#i18n{pluginwizard.pluginwizard_modify_plugin.labelAddBackOfficeJsp}</li>             
+                            <li>#i18n{pluginwizard.pluginwizard_modify_plugin.labelAddBackOfficeTemplate}</li>            
+                            <li>#i18n{pluginwizard.pluginwizard_modify_plugin.labelAddResourceFiles}</li>           
+                            <li>#i18n{pluginwizard.pluginwizard_modify_plugin.labelAddPluginPropertiesFile}</li>             
+                            <li>#i18n{pluginwizard.pluginwizard_modify_plugin.labelAddSpringContextXml}</li>             
+                            <li>#i18n{pluginwizard.pluginwizard_modify_plugin.labelAddPluginXmlDefinition}</li>             
+                            <li>#i18n{pluginwizard.pluginwizard_modify_plugin.labelAddSqlFiles}</li>           
+                            <li>#i18n{pluginwizard.pluginwizard_modify_plugin.labelAddMavenPom}</li>             
+                        </ul>
+                    </div>
+                </div>  
 
                 <div class="form-actions"> 
                     <input type="submit" name="do_create_plugin" class="btn btn-primary" value="#i18n{pluginwizard.pluginwizard_modify_plugin.buttonModifyPlugin}" />
