--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin_description.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_create_plugin_description.html
@@ -1,14 +1,14 @@
 <#include "sidebar.html" />   
 
 <div class="row-fluid"> 
-    
+
     <div class="span3">       
         <@sidebar step="description" />
         <div class="help-block">
             #i18n{pluginwizard.pluginwizard_create_plugin_description.pageHelp}
         </div>
     </div>
-    
+
     <div class="span8">
         <form class="form form-horizontal well" method="post" name="generate" action="jsp/site/Portal.jsp" >    
             <fieldset>
@@ -24,6 +24,20 @@
                     </label>       
                     <div class="controls">                
                         <input type="text" name="plugin_name"  value="<#if plugin_model.pluginName??>${plugin_model.pluginName}</#if>" readonly />       
+                    </div>
+                </div>
+
+                <div class="control-group">
+                    <label class="control-label" >#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginDescription} : </label>
+                    <div class="controls">
+                        <input class="input-xlarge" type="text" name="plugin_description" value="" />
+                    </div>
+                </div>
+
+                <div class="control-group">
+                    <label class="control-label" >#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginProvider} : </label>
+                    <div class="controls">
+                        <input class="input-xlarge" type="text" name="plugin_provider" value="" />
                     </div>
                 </div>
 
