--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_admin_feature.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_admin_feature.html
@@ -11,7 +11,7 @@
 
     <div class="span8">
 
-        <form class="form form-horizontal" method="post" name="generate" > 
+        <form class="form form-horizontal" method="post" name="generate" action="jsp/site/Portal.jsp"> 
             <fieldset>
                 <legend>#i18n{pluginwizard.pluginwizard_modify_admin_feature.pageTitle}</legend>
 
