--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin_description.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_modify_plugin_description.html
@@ -23,11 +23,25 @@
                         #i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginName} :
                     </label>       
                     <div class="controls">                
-                        <input type="text" name="plugin_name"  value="<#if plugin_model.pluginName??>${plugin_model.pluginName}</#if>" readonly />       
+                        <input type="text" name="plugin_name" value="<#if plugin_model.pluginName??>${plugin_model.pluginName}</#if>" readonly />       
                     </div>
                 </div>
 
                 <div class="control-group">
+                    <label class="control-label" >#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginDescription} : </label>
+                    <div class="controls">
+                        <input class="input-xlarge" type="text" name="plugin_description" value="<#if plugin_model.pluginName??>${plugin_model.pluginDescription}</#if>" />
+                    </div>
+                </div>
+
+                <div class="control-group">
+                    <label class="control-label" >#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginProvider} : </label>
+                    <div class="controls">
+                        <input class="input-xlarge" type="text" name="plugin_provider" value="<#if plugin_model.pluginName??>${plugin_model.pluginProvider}</#if>" />
+                    </div>
+                </div>
+
+               <div class="control-group">
                     <label class="control-label" >#i18n{pluginwizard.pluginwizard_create_plugin_description.labelPluginVersion} : </label>       
                     <div class="controls">
                         <input class="input-small" type="text" name="version"  value="${plugin_model.pluginVersion}" size="30" />
