PLUGINWIZARD-39 : Bootstrap integratrion for Lutece v4 - Work in progress
git-svn-id: http://dev.lutece.paris.fr/svn/lutece/portal/trunk/plugins/technical/plugin-pluginwizard@46222 bab10101-e421-0410-a517-8ce0973de3ef

--- a/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_plugin_exists.html
+++ b/webapp/WEB-INF/templates/skin/plugins/pluginwizard/pluginwizard_plugin_exists.html
@@ -19,21 +19,18 @@
                 <legend>#i18n{pluginwizard.pluginwizard_plugin_exists.pageTitle} </legend>                 
 
                 <div class="alert alert-error">
-                            <h4>Attention !</h4>
-                            <br>
-                            <br>
-                            Des donn&eacute;es de g&eacute;n&eacute;ration existent d&eacute;j&agrave; pour ce nom de plugin : <code><strong>${plugin_name}</strong></code> !
+                    #i18n{pluginwizard.pluginwizard_plugin_exists.alert} : <code><strong>${plugin_name}</strong></code> !
                 </div>
                 <div class="span4 well">
                     <button class="btn btn-primary" type="submit" name="preserve">
                         <i class="icon-chevron-right icon-white"></i>
-                        Conserver les donn&eacute;es
+                        #i18n{pluginwizard.pluginwizard_plugin_exists.buttonPreserve}
                     </button>
                 </div>
                 <div class="span4 well">
                     <button class="btn btn-danger" type="submit" name="reset">
                         <i class="icon-trash icon-white"></i>
-                        Supprimer les donn&eacute;es
+                        #i18n{pluginwizard.pluginwizard_plugin_exists.buttonReset}
                     </button>
                 </div>
             </fieldset>
